--- a/index.html
+++ b/index.html
@@ -7,28 +7,49 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
-<body class="bg-gradient-to-br from-blue-400 via-indigo-800 to-purple-900 text-white min-h-screen flex flex-col">
+<body class="bg-gradient-to-br from-gray-900 via-indigo-800 to-purple-900 text-white min-h-screen flex flex-col">
 
   <!-- Navbar  -->
-  <nav class="bg-gradient-to-r from-blue-400 via-indigo-700 to-purple-800 shadow-lg sticky top-0 z-50">
+  <nav class="bg-gradient-to-r from-gray-900 via-indigo-900 to-gray-900 shadow-lg sticky top-0 z-50">
     <div class="container mx-auto flex items-center justify-between p-4">
       <a href="index.html" class="flex items-center space-x-2">
-        <img src="" alt="">
-        <i class="fa-solid fa-bolt text-yellow-400 text-2xl"></i>
-        <span class="font-extrabold text-2xl tracking-wide">SariTech</span>
+        <img 
+        src="img\imglogo\company.png" 
+        alt="logo" 
+        class="w-12 h-auto rounded-xl
+               transition-transform duration-300 ease-in-out 
+               hover:scale-110 hover:shadow-lg 
+               cursor-pointer">
+        
+        <span class="font-extrabold text-2xl text-gray-300 ">SariTech</span>
       </a>
       <ul class="hidden md:flex space-x-8 text-lg font-semibold">
-        <li><a href="index.html" class="hover:text-yellow-400 transition">Home</a></li>
-        <li><a href="shop.html" class="hover:text-yellow-400 transition">Shop</a></li>
-        <li><a href="deals.html" class="hover:text-yellow-400 transition">Deals</a></li>
-        <li><a href="contact.html" class="hover:text-yellow-400 transition">Contact</a></li>
+        <li><a href="index.html" class="hover:text-gray-300 transition">Home</a></li>
+        <li><a href="shop.html" class="hover:text-gray-300 transition">Shop</a></li>
+        <li><a href="deals.html" class="hover:text-gray-300 transition">Deals</a></li>
+        <li><a href="contact.html" class="hover:text-gray-300 transition">Contact</a></li>
       </ul>
       <div class="flex items-center space-x-4">
         <a href="cart.html" class="relative">
-          <i class="fas fa-shopping-cart text-2xl hover:text-yellow-400 transition"></i>
-          <span id="cart-count" class="absolute -top-2 -right-2 bg-yellow-400 text-black text-xs font-bold rounded-full px-1.5">0</span>
+          <i class="fas fa-shopping-cart text-2xl hover:text-gray-300 transition"></i>
+          <span id="cart-count" 
+                    class="absolute 
+                        -top-2 
+                        -right-2 
+                        bg-green-400 
+                        text-gray-200 
+                        text-xs 
+                        font-bold 
+                        rounded-full 
+                        px-1.5">
+                                0
+            </span>
         </a>
-        <button id="mobile-menu-btn" class="md:hidden text-2xl hover:text-yellow-400 transition">
+        <button id="mobile-menu-btn"
+                 class="md:hidden 
+                        text-2xl 
+                        hover:text-gray-300
+                         transition">
           <i class="fas fa-bars"></i>
         </button>
       </div>
