--- a/index.html
+++ b/index.html
@@ -55,3 +55,37 @@
       </div>
     </div>
   </nav>
+
+  
+  <!-- Footer  -->
+  <footer class="bg-gradient-to-r from-gray-900 via-indigo-900 to-gray-900 py-10 mt-auto">
+    <div class="container mx-auto px-4 
+                grid grid-cols-1 md:grid-cols-3 gap-8   
+                 text-gray-300">
+      <div>
+        <h3 class="text-xl font-bold text-gray-100 mb-4">SariTech ElectroMart</h3>
+        <p>Your trusted source for Ex-UK Phones and laptops.</p>
+      </div>
+      <div>
+        <h3 class="text-xl font-bold text-gray-100 mb-4">Quick Links</h3>
+        <ul class="space-y-2">
+          <li><a href="index.html" class="hover:text-gray-100 transition">Home</a></li>
+          <li><a href="shop.html" class="hover:text-gray-100 transition">Shop</a></li>
+          <li><a href="contact.html" class="hover:text-gray-100 transition">Contact</a></li>
+        </ul>
+      </div>
+      <div>
+        <h3 class="text-xl font-bold text-gray-100 mb-4">Contact Us</h3>
+        <p><i class="fa-solid fa-phone text-gray-100 mr-2"></i> +254 111980660</p>
+        <p><i class="fa-solid fa-envelope text-gray-100 mr-2"></i> alvin@saritechsolutionsltd.org</p>
+        <div class="flex space-x-4 mt-4">
+          <a href="https://www.facebook.com/SaritechSolutions" class="text-2xl hover:text-gray-400"><i class="fab fa-facebook"></i></a>
+          <a href="https://x.com/" class="text-2xl hover:text-gray-400"><i class="fab fa-twitter"></i></a>
+          <a href="https://www.instagram.com/" class="text-2xl hover:text-gray-400"><i class="fab fa-instagram"></i></a>
+        </div>
+      </div>
+    </div>
+    <div class="text-center text-gray-400 mt-8 text-sm border-t border-gray-700 pt-4">
+      &copy; <span id="year"></span> SariTech ElectroMart. All rights reserved.
+    </div>
+  </footer>
