--- a/index.html
+++ b/index.html
@@ -56,6 +56,77 @@
     </div>
   </nav>
 
+   <!-- Background Image -->
+    <img 
+      src="img\imghero\heroimg.jpeg" 
+      alt="Tech Background" 
+      class="absolute inset-0 w-full h-full object-cover opacity-25 -z-10" 
+    />
+<!-- Main -->
+<main class="container mx-auto px-4 py-16 flex-1">
+  <header class="bg-gradient-to-r from-gray-900 via-indigo-900 to-gray-900 backdrop-blur-sm rounded-3xl p-10 mb-10 text-center text-white shadow-2xl">
+    <h1 class="text-4xl md:text-5xl font-extrabold text-gray-100 mb-4">
+      Ex-UK Laptops, Phones & Repair Experts in Kenya
+    </h1>
+    <p class="text-gray-300 text-lg max-w-2xl mx-auto mb-8">
+      Discover top-quality refurbished devices and professional repair services—all at unbeatable prices.
+    </p>
+
+    <div class="mt-8 flex justify-center gap-4 flex-wrap">
+      <a href="shop.html" class="px-6 py-3 rounded-lg border border-gray-100 text-gray-100 font-semibold hover:bg-indigo-600 hover:text-black transition">
+        Shop Now
+      </a>
+      <a href="deals.html" class="px-6 py-3 rounded-lg border border-gray-100 text-gray-100 font-semibold hover:bg-indigo-600 hover:text-black transition">
+        View Deals
+      </a>
+      <a href="repairs.html" class="px-6 py-3 rounded-lg border border-gray-100 text-white hover:bg-indigo-600 transition font-semibold">
+        Book a Repair
+      </a>
+    </div>
+  </header>
+
+  <!-- Product Showcase Section -->
+  <section class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 
+                gap-6 mt-10">
+    <!-- Laptop -->
+    <div class="bg-white/10 backdrop-blur-sm rounded-2xl overflow-hidden shadow-lg hover:scale-105 transition">
+      <img src="img\imgposter\laptophero poster.jpeg" alt="Laptops" class="w-full h-56 object-cover" />
+      <div class="p-4">
+        <h3 class="text-gray-400 font-bold text-lg">Refurbished Laptops</h3>
+        <p class="text-gray-300 text-sm">Top brands like HP, Dell, and Lenovo available.</p>
+      </div>
+    </div>
+
+    <!-- Phone -->
+    <div class="bg-white/10 backdrop-blur-sm rounded-2xl overflow-hidden shadow-lg hover:scale-105 transition">
+      <img src="img\imghero\phonelaptopposter.jpeg" alt="Phones" class="w-full h-56 object-cover" />
+      <div class="p-4">
+        <h3 class="text-gray-400 font-bold text-lg">Smartphones</h3>
+        <p class="text-gray-300 text-sm">Quality Ex-UK iPhones and Android devices.</p>
+      </div>
+    </div>
+
+    <!-- Accessories -->
+    <div class="bg-white/10 backdrop-blur-sm rounded-2xl overflow-hidden shadow-lg hover:scale-105 transition">
+      <img src="img\imghero\accessoriesheroposter.jpeg" alt="Accessories" class="w-full h-56 object-cover" />
+      <div class="p-4">
+        <h3 class="text-gray-400 font-bold text-lg">Accessories</h3>
+        <p class="text-gray-300 text-sm">Chargers, cases, keyboards, and more gadgets.</p>
+      </div>
+    </div>
+
+    <!-- Repairs -->
+    <div class="bg-white/10 backdrop-blur-sm rounded-2xl overflow-hidden shadow-lg hover:scale-105 transition">
+      <img src="img\imghero\phonerepairheroposter.jpeg" alt="Repair Services" class="w-full h-56 object-cover" />
+      <div class="p-4">
+        <h3 class="text-gray-400 font-bold text-lg">Repair Services</h3>
+        <p class="text-gray-300 text-sm">Fast and affordable phone & laptop repairs.</p>
+      </div>
+    </div>
+  </section>
+</main>
+
+
   
   <!-- Footer  -->
   <footer class="bg-gradient-to-r from-gray-900 via-indigo-900 to-gray-900 py-10 mt-auto">
