shop.js rendering

--- a/shop.html
+++ b/shop.html
@@ -57,6 +57,28 @@
   </nav>
 
   
+   <!-- Main -->
+  <main class="container mx-auto px-4 py-10 flex-1">
+    <div class="flex items-center justify-between mb-6">
+      <h1 class="text-3xl font-bold">Check out our amamzing offers !!</h1>
+
+      <div class="flex items-center gap-3">
+        <input id="search" type="search" placeholder="Search products..." class="bg-white/10 text-white px-3 py-2 rounded-lg focus:outline-none" />
+        
+        <select id="filter-category" class="bg-white/10 px-3 py-2 rounded-lg">
+          <option value="all">All Categories</option>
+          <option value="phone">Phones</option>
+          <option value="laptop">Laptops</option>
+        </select>
+      </div>
+    </div>
+
+
+    <!--shop.js-->
+    <div id="shop-grid" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8">
+    
+    </div>
+  </main>
 
   
   <!-- Footer  -->
