--- a/cart.html
+++ b/cart.html
@@ -26,8 +26,7 @@
       <ul class="hidden md:flex space-x-8 text-lg font-semibold">
         <li><a href="index.html" class="hover:text-gray-300 transition">Home</a></li>
         <li><a href="shop.html" class="hover:text-gray-300 transition">Shop</a></li>
-        <li><a href="deals.html" class="hover:text-gray-300 transition">Deals</a></li>
-        <li><a href="contact.html" class="hover:text-gray-300 transition">Contact</a></li>
+        <li><a href="contact.html" class="hover:text-gray-300 transition">Book Repair</a></li>
       </ul>
       <div class="flex items-center space-x-4">
         <a href="cart.html" class="relative">
@@ -71,7 +70,7 @@
         <ul class="space-y-2">
           <li><a href="index.html" class="hover:text-gray-100 transition">Home</a></li>
           <li><a href="shop.html" class="hover:text-gray-100 transition">Shop</a></li>
-          <li><a href="contact.html" class="hover:text-gray-100 transition">Contact</a></li>
+          <li><a href="contact.html" class="hover:text-gray-100 transition">Book Repair</a></li>
         </ul>
       </div>
       <div>
