--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,7 @@
       <ul class="hidden md:flex space-x-8 text-lg font-semibold">
         <li><a href="index.html" class="hover:text-gray-300 transition">Home</a></li>
         <li><a href="shop.html" class="hover:text-gray-300 transition">Shop</a></li>
-        <li><a href="deals.html" class="hover:text-gray-300 transition">Deals</a></li>
-        <li><a href="contact.html" class="hover:text-gray-300 transition">Contact</a></li>
+        <li><a href="contact.html" class="hover:text-gray-300 transition">Book Repair</a></li>
       </ul>
       <div class="flex items-center space-x-4">
         <a href="cart.html" class="relative">
@@ -56,6 +55,43 @@
     </div>
   </nav>
 
+
+   <!-- Background Image -->
+    <img 
+      src="img\repairimagebackground.jpeg" 
+      alt="Contact  Background" 
+      class="absolute inset-0 w-full h-full object-cover opacity- -z-10" 
+    />
+
+  <main class="container mx-auto px-4 py-10 flex-1">
+    
+    <h1 class="text-3xl font-bold mb-4">Book Phone and Computer repair</h1>
+    <p class="text-gray-300 mb-6">Certified and Trusted Technicians available for  repair.</p>
+
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+      <div class="bg-white/10 p-6 rounded-lg">
+        <h3 class="text-xl font-semibold mb-4">Get in touch</h3>
+        <form id="contact-form" class="space-y-4">
+          <input id="name" type="text" placeholder="Your name" required class="w-full p-3 rounded bg-white/5 text-white" />
+          <input id="email" type="email" placeholder="Your email" required class="w-full p-3 rounded bg-white/5 text-white" />
+          <textarea id="message" rows="5" placeholder="Message" class="w-full p-3 rounded bg-white/5 text-white"></textarea>
+          <button type="submit" class="bg-yellow-500 text-black px-4 py-2 rounded font-semibold">Send Message</button>
+        </form>
+      </div>
+
+      <div class="bg-white/10 p-6 rounded-lg">
+        <h3 class="text-xl font-semibold mb-4">Our Info</h3>
+        <p class="text-gray-300"><strong>Address:</strong> Nairobi, Kenya</p>
+        <p class="text-gray-300 mt-2"><strong>Email:</strong> info@saritech.co.ke</p>
+        <p class="text-gray-300 mt-2"><strong>Phone:</strong> +254 712 345 678</p>
+        <div class="mt-6">
+          <iframe class="w-full h-40 rounded" loading="lazy" src="https://maps.google.com/maps?q=nairobi&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  
   
   <!-- Footer  -->
   <footer class="bg-gradient-to-r from-gray-900 via-indigo-900 to-gray-900 py-10 mt-auto">
