js file for shop.html

--- a/contact.html
+++ b/contact.html
@@ -74,16 +74,16 @@
         <form id="contact-form" class="space-y-4">
           <input id="name" type="text" placeholder="Your name" required class="w-full p-3 rounded bg-white/5 text-white" />
           <input id="email" type="email" placeholder="Your email" required class="w-full p-3 rounded bg-white/5 text-white" />
-          <textarea id="message" rows="5" placeholder="Message" class="w-full p-3 rounded bg-white/5 text-white"></textarea>
-          <button type="submit" class="bg-yellow-500 text-black px-4 py-2 rounded font-semibold">Send Message</button>
+          <textarea id="message" rows="5" placeholder="Describe Electronic Fault" class="w-full p-3 rounded bg-white/5 text-white"></textarea>
+          <button type="submit" class="bg-green-500 text-black px-4 py-2 rounded font-semibold">Book Repair Session</button>
         </form>
       </div>
 
       <div class="bg-white/10 p-6 rounded-lg">
         <h3 class="text-xl font-semibold mb-4">Our Info</h3>
-        <p class="text-gray-300"><strong>Address:</strong> Nairobi, Kenya</p>
-        <p class="text-gray-300 mt-2"><strong>Email:</strong> info@saritech.co.ke</p>
-        <p class="text-gray-300 mt-2"><strong>Phone:</strong> +254 712 345 678</p>
+        <p class="text-gray-300"><strong>Address:</strong> Bazzar Plaza ,8th floor wing B ,shop 810, Kenya</p>
+        <p class="text-gray-300 mt-2"><strong>Email:</strong>  alvin@saritechsolutionsltd.org</p>
+        <p class="text-gray-300 mt-2"><strong>Phone:</strong> +254111980660</p>
         <div class="mt-6">
           <iframe class="w-full h-40 rounded" loading="lazy" src="https://maps.google.com/maps?q=nairobi&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
         </div>
