--- a/shop.html
+++ b/shop.html
@@ -112,3 +112,7 @@
       &copy; <span id="year"></span> SariTech ElectroMart. All rights reserved.
     </div>
   </footer>
+   <script src="shop.js"></script>   
+</body>
+
+</html>
