--- a/cart.html
+++ b/cart.html
@@ -55,6 +55,21 @@
     </div>
   </nav>
 
+  <!-- Main -->
+  <main class="container mx-auto px-4 py-10 flex-1">
+    <h1 class="text-3xl font-bold mb-8">Your Shopping Cart</h1>
+    <div id="cart-items" class="space-y-6"></div>
+
+   <!-- Total Section -->
+    <div class="mt-8 border-t border-gray-700 pt-6 text-right">
+      <h2 class="text-2xl font-bold">Total: <span id="cart-total">Ksh 0</span></h2>
+      <button id="checkout-btn" 
+              class="bg-green-500 hover:bg-green-600 text-white px-6 py-3 rounded-lg mt-4 transition">
+        Proceed to Checkout
+      </button>
+    </div>
+  </main>
+
   
   <!-- Footer  -->
   <footer class="bg-gradient-to-r from-gray-900 via-indigo-900 to-gray-900 py-10 mt-auto">
@@ -88,3 +103,6 @@
       &copy; <span id="year"></span> SariTech ElectroMart. All rights reserved.
     </div>
   </footer>
+   <script src="cart.js"></script>
+</body>
+</html>
